WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193961
REGRESSION (PSON): Flash on link navigation on Mac
https://bugs.webkit.org/show_bug.cgi?id=193961
Summary
REGRESSION (PSON): Flash on link navigation on Mac
Antti Koivisto
Reported
2019-01-29 04:03:44 PST
Steps To Reproduce: 1. Go to news.ycombinator.com 2. Click a link to some external site 3. Hit back 4. Click the same link again Results: Sometime you get black or white flash (depending on dark mode setting). Fast loading sites seem more likely to show it.
Attachments
patch
(7.93 KB, patch)
2019-01-29 04:25 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2019-01-29 04:04:00 PST
<
rdar://problem/47482507
>
Antti Koivisto
Comment 2
2019-01-29 04:25:33 PST
Created
attachment 360457
[details]
patch
WebKit Commit Bot
Comment 3
2019-01-29 10:18:58 PST
Comment on
attachment 360457
[details]
patch Clearing flags on attachment: 360457 Committed
r240663
: <
https://trac.webkit.org/changeset/240663
>
WebKit Commit Bot
Comment 4
2019-01-29 10:18:59 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug